fix comment text align

--- a/app/assets/stylesheets/main-2.scss
+++ b/app/assets/stylesheets/main-2.scss
@@ -4138,3 +4138,9 @@ figure.post-image {
     }
   }
 }
+
+.comments{
+  @media (max-width: 670px) {
+    text-align: left;
+  }
+}
